--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  mvc:
+    static-path-pattern: /static/**
   application:
     name: demo
   jackson:
@@ -8,6 +10,10 @@ spring:
     password: mysqladmin
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/view_data
+  thymeleaf:
+    enabled: true
+    cache: true
+
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
