--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     date-format: yyyy-MM-dd
   datasource:
     username: root
-    password: mysqladmin
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/view_data
   thymeleaf:
